<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- MAIN SETTINGS -->
    <string name="app_name">devPlan</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_info">InfoActivity</string>

    <!-- GROUPS VIEW -->
    <string name="add_group_label">Dodaj grupę</string>
    <string name="selected_groups_label">Wybrane grupy</string>
    <string name="update_time_table_button">Pobierz plan</string>
    <string name="filter_group_hint">Wprowadź nazwę grupy</string>
    <string name="no_selected_groups_text">Brak wybranych grup</string>

    <!-- MAIN VIEW -->
    <string name="groups_tab_label">Grupy</string>
    <string name="timetable_tab_label">Plan</string>
    <string name="options_tab_label">Opcje</string>

    <!-- URLs -->
    <string name="home_page">http://devplan.uek.krakow.pl</string>
	<string name="google_play_url">https://play.google.com/store/apps/details?id=dev.rd.devplan</string>
	<string name="groups_download_url">http://cash.dev.uek.krakow.pl/v0_1/groups</string>
	<string name="timetable_download_url">http://cash.dev.uek.krakow.pl:3000/v0_1/timetables/</string>
	
    <!-- FILTER -->
    <string name="filters_title">Filtry</string>
    <string name="filter_by_name">Filtruj po nazwie</string>
    <string name="filter_since_today">Pokaż od dziś</string>
    <string name="filter_full_semester">Pokaż cały semestr</string>

    <!-- ERROR MESSAGE -->
    <string name="error_activity_title">Zgłoś błąd</string>
    <string name="email">Adres email: </string>
    <string name="email_hint">Wpisz swój adres email</string>
    <string name="error_description">Opis błędu</string>
    <string name="error_description_hint">Opisz błąd jaki napotkałeś</string>
    <string name="send_error_raport">Wyślij</string>
    <string name="wrong_data">Pola nie zostały poprawnie wypełnione</string>
    <string name="error_reported">Zgłoszoną błąd, dziękujemy!</string>

    <!-- DOWNLOAD TIME TABLE MESSAGES -->
    <string name="download_finished_message">Pobieranie planu zajęć zakończone</string>
    <string name="download_started">Rozpoczęto pobieranie planu zajęć</string>
    <string name="app_info">Wersja: 1.0\nData wydania: 10.03.2014\n</string>
    <string name="app_sites">Strona projektu </string>
    <string name="google_play_site">Google play </string>
    
    <string name="authors">Autor programu: Robert Dzieża\nEmail: dziezarobert@gmail.com</string>
    <string name="dev_note">Aplikacja przygotowana przy współpracy z członkami koła naukowego >dev działającym przy Uniwersytecie Ekonomicznym w Krakowie.</string>
    <string name="thanks_note">Dziękujemy za pobranie!</string>

    <!-- OPTIONS FRAGMENT -->
    <string name="option_homepage">Strona projektu"</string>
    <string name="option_check_update">"Sprawdź aktualność"</string>
    <string name="option_update_groups">"Aktualizuj listę grup"</string>
    <string name="option_report_error">"Zgłoś błąd"</string>
    <string name="option_info">"O programie"</string>
    
    <!-- LOADERS -->
	<string name="downloading_time_table_info">Pobieranie planu zajęć...</string>
	<string name="downloading_groups_info">Pobieranie listy grup...</string>
	
	<!-- CHECK VERSION -->
	<string name="timetable_up_to_date">Plan zajęć aktualny</string>
	<string name="timetable_not_up_to_date">Plan zajęć nieaktualny! \nCzy chcesz podbrać nowszą wersje?</string>
</resources>
