<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >
     
	<include layout="@layout/header_view"/>
	
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/home_page_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_sites" />
        <TextView
            android:id="@+id/home_page_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/home_page"
            android:textColor="#800099CC"
             />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/google_play_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google_play_site" />
        <TextView
            android:id="@+id/google_play_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/google_play_url"
            android:textColor="#800099CC"
             />
    </LinearLayout>
     
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/authors" /> 

</LinearLayout>